--- a/app/assets/stylesheets/items/show.scss
+++ b/app/assets/stylesheets/items/show.scss
@@ -1,23 +1,3 @@
-/* aタグ共有 */
-a {
-  text-decoration: none;
-}
-/* ヘッダー共有ブロック */
-.header {
-  position: fixed;
-  top: 0px;
-  width: 100vw;
-  border-bottom: 1px rgba(0, 0, 0, 0.253) solid;
-  background-color:#ffffff;
-}
-/* 背景 */
-.wrapper{
-  height: 100vh;
-  padding-top: 90px;
-  background-color: #fffafafa;
-  overflow: hidden;
-  overflow: scroll;
-}
 .item-container {
   background-color: white;
   width: 600px;
@@ -70,7 +50,7 @@ a {
 .item-btn{
   margin: auto;
   height: 50px;
-  width: 400px;
+  // width: 400px;
   border: 1px gray solid;
   box-shadow: 3px 3px 3px gray;
   border-radius: 3px;
@@ -99,4 +79,57 @@ a {
 }
 .delete-btn {
   background-color: red;
+}
+
+.item-comment-container {
+  background-color: white;
+  width: 600px;
+  box-shadow: 3px 3px 3px gray;
+  margin: auto;
+  margin-top: 50px ;
+  margin-bottom: 50px;
+  padding: 50px 30px 50px 30px; 
+}
+.item-comment {
+  margin: 10px;
+}
+.comment-user {
+  font-weight: bold;
+}
+.comment-body {
+  background-color:#eef0f4;
+  border-radius: 3px;
+  padding: 8px;
+  margin-left: 10px;
+}
+.comment-text {
+
+}
+.comment-time {
+  display: inline-block;
+  text-align: right;
+  width: 100%;
+  font-size: 12px;
+  color: #aaa;
+}
+.new-comment{
+  margin-top: 30px;
+  
+}
+.new-comment-text {
+  display: block;
+  width: 100%;
+  margin-bottom: 20px;
+  border-color: #ccc;
+  padding: 8px;
+
+}
+.comment-submit {
+  display: block;
+  background-color: gray;
+  width: 100%;
+  border: none;
+  color: #ffffff;
+  height: 45px;
+  border-radius: 3px;
 }
