--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -5,18 +5,15 @@
 <div class="wrapper">
   <%# トップ画像 %>
   <div class="top-image-field">
-    <h1 class="top-image-text">創造力を実現するための手助けします</h1>
-  </div>
-  <%# サービス紹介 %>
-  <div class="item--info-field">
-    <div class="top-page-container">
-      <h2 class="top-page-content-title">RENT-Toolsとは？</h2>
-        <p>testtesttesttesttesttesttesttesttesttesttesttest</p>
-        <p>testtesttesttesttesttesttesttesttesttesttesttest</p>
-        <p>testtesttesttesttesttesttesttesttesttesttesttest</p>
-        <p>testtesttesttesttesttesttesttesttesttesttesttest</p>
+    <div class="top-image-text">
+      <h1 >創造したものを実現するための手助けします</h1>
+      <p>製菓道具を中心としたエコノミーシェアリングのマッチングサイトです</p><br>
+      <p>お菓子作りをする上で、道具を買い揃えるのが大変だと思っていませんか？</p><br>
+      <p>RENT-Toolsを使えば、そのハードルを下げることができます</p><br>
+      <p>さぁ、RENT-Toolsをはじめましょう</p>
     </div>
   </div>
+
   <div class="item-main-field">
     <div class="top-page-container">
       <%# 商品一覧 %>
