コメント削除ボタンの表示切り替え

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -8,8 +8,10 @@
             <%= comment.text %>
           </div>
           <div class="comment-time">
-            <%= comment.created_at.to_s(:datetime_jp) %> 
-            <%= link_to '削除', item_comment_path(@item, comment), method: :delete, remote: true %>
+            <%= comment.created_at.to_s(:datetime_jp) %>
+            <% if current_user == @item.user || current_user == comment.borrower  %> 
+              <%= link_to '削除', item_comment_path(@item, comment), method: :delete, remote: true %>
+            <% end %>
           </div>  
         </div>
       </li>
