--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -79,8 +79,12 @@
     <%# 新規コメントフォーム %>
     <%= form_with model:@comment, url: item_comments_path(@item ,@comment) ,remote: true do |f|%>
       <div class="new-comment">
-        <%= f.text_area :text ,class:"new-comment-text", size:"20x6"%>
-        <%= f.submit "コメントする" , class:"comment-submit",  id:"comment-submit" %>
+        <% if current_user != nil %>
+          <%= f.text_area :text ,class:"new-comment-text", size:"20x6" %> 
+          <%= f.submit "コメントする" , class:"comment-submit",  id:"comment-submit" %>
+        <% else %>
+          <p class="comment-impossible">ログインするとコメントできるようになります</p>
+        <% end %>
       </div>  
     <% end %>
   </div>
