--- a/app/assets/stylesheets/items/show.scss
+++ b/app/assets/stylesheets/items/show.scss
@@ -80,7 +80,7 @@
 .delete-btn {
   background-color: red;
 }
-
+// ↓ここからコメントのCSS
 .item-comment-container {
   background-color: white;
   width: 600px;
@@ -102,9 +102,7 @@
   padding: 8px;
   margin-left: 10px;
 }
-.comment-text {
 
-}
 .comment-time {
   display: inline-block;
   text-align: right;
@@ -132,4 +130,9 @@
   color: #ffffff;
   height: 45px;
   border-radius: 3px;
+}
+.comment-impossible {
+  text-align: center;
+  color: #66879a;
+  font-size: 20px;
 }
