--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -5,7 +5,7 @@
         </div>
         <div class="comment-body">
           <div class="comment-text">
-            <%= comment.text %>
+            <%= safe_join("#{comment.text}".split("\n"),tag(:br)) %>
           </div>
           <div class="comment-time">
             <%= comment.created_at.to_s(:datetime_jp) %>
