--- a/app/assets/stylesheets/items/show.scss
+++ b/app/assets/stylesheets/items/show.scss
@@ -102,10 +102,14 @@
   padding: 8px;
   margin-left: 10px;
 }
-
+.comment-bottom {
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-end;
+  margin-top: 10px;
+}
 .comment-time {
   display: inline-block;
-  text-align: right;
   width: 100%;
   font-size: 12px;
   color: #aaa;
