--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -3,21 +3,12 @@
 </div>
   
 <div class="wrapper">
-  <%# トップ画像 %>
-  <div class="top-image-field">
-    <div class="top-image-text">
-      <h1 >創造したものを実現するための手助けします</h1>
-      <p>製菓道具を中心としたエコノミーシェアリングのマッチングサイトです</p><br>
-      <p>お菓子作りをする上で、道具を買い揃えるのが大変だと思っていませんか？</p><br>
-      <p>RENT-Toolsを使えば、そのハードルを下げることができます</p><br>
-      <p>さぁ、RENT-Toolsをはじめましょう</p>
-    </div>
-  </div>
+  
 
   <div class="item-main-field">
     <div class="top-page-container">
       <%# 商品一覧 %>
-      <h2 class="top-page-content-title">商品一覧</h2>
+      <h2 class="item-index-content-title">商品一覧</h2>
       <ul class= "index-items-field">
           <% @items.each do |item| %>
             <li class= "index-item-list">
