--- a/app/assets/stylesheets/items/index.scss
+++ b/app/assets/stylesheets/items/index.scss
@@ -1,35 +1,5 @@
-/* トップの画像 */
-.top-image-field {
-  width: 100vw;
-  height: 700px;
-  background-image: image-url('top_image.png');
-  background-size: cover;
-  background-repeat: no-repeat;
-  ;
-}
-/* トップ画像のテキスト */
-.top-image-text{
-  padding: 200px 0px 0px 50px;
-  color: white;
-  text-shadow: 2px 2px 5px black;
-    h1 {
-      font-size: 40px;
-      margin-bottom: 20px;
-    }
-    p {
-      margin-left: 10px;
-      font-size: 20px;
-    }
-}
-.top-page-container{
-  text-align: center;
-  margin: auto;
-  width: 100vw;
-  margin-top: 50px;
-  margin-bottom: 50px
-}
 /* タイトル */
-.top-page-content-title {
+.item-index-content-title {
   font-size: 30px;
   margin: 50px;
   border-bottom: 1px rgb(230,230,230) solid;
