--- a/app/assets/stylesheets/module/_header.scss
+++ b/app/assets/stylesheets/module/_header.scss
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: space-between;
   height: 80px;
-  margin: 10px 60px 0px 60px;
+  margin: 10px 60px 10px 60px;
 }
 /* header-left */
 .logo-image {
@@ -12,9 +12,12 @@
 }
 /* header-right */
 .header-right { 
-  width: 600px;
+  width: 800px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
-.right-upper {
+.header-search {
   display: flex;
   justify-content: space-between;
 }
@@ -23,16 +26,19 @@
   font-weight: bold;
 }
 .search-form{
+  // height: 40px;
   width: 300px;
+  margin-left: 40px;
 }
 .right-bottom {
   display: flex;
   justify-content: flex-end;
-  margin-top: 15px;
+  align-items: center;
+  margin-left: auto;
 }
 .login-user {
   font-weight: bold;
-  height: 30px;
+  // height: 30px;
 }
 
 .right-btn {
