マイページ通知表示

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,7 +19,9 @@
         <div class="user-info-title">
           お知らせ
         </div>
-        <div class="user-info">現在お知らせはありません</div>
+        <div class="user-info">
+          <%= render 'notifications/notification'%>
+        </div>
         
     </div>
   </div>
