--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -47,6 +47,10 @@
           <%= f.submit "新規登録", class: "user-form-btn"%>
         </div>
       <% end%>
+      <div class="get-sign-in">
+        <p>アカウントをお持ちですか？ <%= link_to "ログイン", new_user_session_path, class: "get-sign-in-btn" %></p>
+        
+      </div>
     </div>
   </div>
 </div>
