--- a/app/assets/stylesheets/user/registration/new.scss
+++ b/app/assets/stylesheets/user/registration/new.scss
@@ -47,3 +47,14 @@
   color: #7f7e7d;
   background-color: lightgray;
 }
+.get-sign-in {
+  margin-top: 50px;
+  text-align: center;
+  padding-top: 40px;
+  border-top: 1px #ccc solid;
+}
+.get-sign-in-btn {
+  color: forestgreen;
+  font-size: 20px;
+  border-bottom: 1px forestgreen solid;
+}
