--- a/app/assets/stylesheets/user/session/new.scss
+++ b/app/assets/stylesheets/user/session/new.scss
@@ -66,3 +66,14 @@ a {
   color: #7f7e7d;
   background-color: lightgray;
 }
+.get-sign-up {
+  margin-top: 50px;
+  text-align: center;
+  padding-top: 40px;
+  border-top: 1px #ccc solid;
+}
+.get-sign-up-btn {
+  color: forestgreen;
+  font-size: 20px;
+  border-bottom: 1px forestgreen solid;
+}
