--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -16,7 +16,7 @@
             <%= render 'shared/error_message', model: @user %>
             <div class="user-form-wrap">
               <div class="user-form-text">
-                <label >名前</label><span class="required">必須</span>
+                <label for="user_name">名前</label><span class="required">必須</span>
               </div>
                 <%= f.text_field :name, class: "user-form", autofocus: true %>
             </div>
@@ -24,7 +24,7 @@
 
             <div class="user-form-wrap">
               <div class="user-form-text">
-                <label >Eメール</label><span class="required">必須</span>
+                <label for="user_email">Eメール</label><span class="required">必須</span>
               </div>
                 <%= f.text_field :email, class: "user-form" %>
             </div>
@@ -32,7 +32,7 @@
 
             <div class="user-form-wrap">
               <div class="user-form-text">
-                <label >会社名</label>
+                <label for="user_company_name">会社名</label>
               </div>
                 <%= f.text_field :company_name, class: "user-form" %>
             </div>
@@ -61,7 +61,7 @@
                   <%# アドレスが未登録 %>
                   <div class="address-btn-field">
                     <div class="user-address-regist-btn">
-                      <%= link_to "登録" , new_user_address_path(current_user), local: true %>
+                      <%= link_to "登録" , new_user_address_path(current_user),name: "commit", local: true %>
                     </div>
                   </div>
                   <div class="address-show-false">
