--- a/app/views/addresses/edit.html.erb
+++ b/app/views/addresses/edit.html.erb
@@ -10,40 +10,40 @@
           <%= render 'shared/error_message', model: f.object %>
           <div class="address-form-wrap">
             <div class="address-form-text">
-              <label>郵便番号(半角数字・ハイフンなし)</label><span class="required">必須</span>
+              <label for="address_postal_code">郵便番号(半角数字・ハイフンなし)</label><span class="required">必須</span>
               <%= f.text_field :postal_code, class: "address-form" %>
 
           <div class="form-half-wrap">
             <div class="address-form-text">
-              <label>都道府県</label><span class="required">必須</span>
+              <label for="address_prefecture_id">都道府県</label><span class="required">必須</span>
             </div>
               <%= f.collection_select :prefecture_id, Prefecture.all, :id, :name,{include_blank: "選択してください"},{class: "select-form"} %>
           </div>
 
           <div class="address-form-wrap">
             <div class="address-form-text">
-              <label>市区町村</label><span class="required">必須</span>
+              <label for="address_city_name">市区町村</label><span class="required">必須</span>
             </div>
               <%= f.text_field :city_name, class: "address-form" %>
           </div>
 
           <div class="address-form-wrap">
             <div class="address-form-text">
-              <label>番地</label><span class="required">必須</span>
+              <label for="address_house_number">番地</label><span class="required">必須</span>
             </div>
               <%= f.text_field :house_number, class: "address-form" %>
           </div>
 
           <div class="address-form-wrap">
             <div class="address-form-text">
-              <label>建物名</label>
+              <label for="address_building_name">建物名</label>
             </div>
               <%= f.text_field :building_name, class: "address-form" %>
           </div>
 
           <div class="address-form-wrap">
             <div class="address-form-text">
-              <label>電話番号(半角数字・ハイフンなし)</label><span class="required">必須</span>
+              <label for="address_phone_number">電話番号(半角数字・ハイフンなし)</label><span class="required">必須</span>
             </div>
               <%= f.text_field :phone_number, class: "address-form" %>
           </div>
