リンクのエリア変更

--- a/app/views/users/shared/_user_side.html.erb
+++ b/app/views/users/shared/_user_side.html.erb
@@ -1,32 +1,56 @@
 <%# サイドバー %>
     <div class="user-show-sidebar">
-      <div class="user-info-content">
-        <%=link_to "お知らせ", user_path(current_user) %>
-        <i class="fas fa-angle-right fa-2x"></i>
-      </div>
-      <div class="user-info-content">
-        <%=link_to "本人情報", edit_user_path(current_user) %>
-        <i class="fas fa-angle-right fa-2x"></i>
-      </div>
-      <div class="user-info-content">
-        <a href="#">お気に入り</a>
-        <i class="fas fa-angle-right fa-2x"></i>
-      </div>
-      <div class="user-info-content">
-        <a href="#">レンタル履歴</a>
-        <i class="fas fa-angle-right fa-2x"></i>
-      </div>
-      <div class="user-info-content">
-        <% if current_user.address %>
-          <%=link_to "住所変更", edit_user_address_path(current_user) %>
+    
+      <%=link_to  user_path(current_user) ,class:"user-info-area" do %>
+        <div class="user-info-content">
+          <p>お知らせ</p>
           <i class="fas fa-angle-right fa-2x"></i>
-        <% else %>
-          <%=link_to "住所登録", new_user_address_path(current_user) %>
+        </div>
+      <% end %>
+    
+
+      <%=link_to  edit_user_path(current_user),class:"user-info-area" do %>
+        <div class="user-info-content">
+          <p>本人情報</p>
           <i class="fas fa-angle-right fa-2x"></i>
+        </div>
+      <% end %>
+
+      <%=link_to  "#", class:"user-info-area" do %>
+      <div class="user-info-content">
+        <p>お気に入り</p>
+        <i class="fas fa-angle-right fa-2x"></i>
+      </div>
+      <% end %>
+
+      <%=link_to  "#",class:"user-info-area" do %>
+      <div class="user-info-content">
+        <p>レンタル履歴</p>
+        <i class="fas fa-angle-right fa-2x"></i>
+      </div>
+      <% end %>
+
+      <% if current_user.address %>
+        <%=link_to  edit_user_address_path(current_user) ,class:"user-info-area" do %>
+          <div class="user-info-content">
+            <p>住所変更</p> 
+            <i class="fas fa-angle-right fa-2x"></i>
+          </div>
         <% end %>
-      </div>
-      <div class="user-info-content">
-        <%=link_to "お支払い方法", user_card_path(current_user) %>
-        <i class="fas fa-angle-right fa-2x"></i>
-      </div>
+      <% else %>
+        <%=link_to new_user_address_path(current_user) ,class:"user-info-area" do %>
+        <div class="user-info-content">
+          <p>住所登録</p>
+          <i class="fas fa-angle-right fa-2x"></i>
+        </div>
+        <% end %>
+      <% end %>
+
+      
+      <%=link_to  user_card_path(current_user),class:"user-info-area" do %>
+        <div class="user-info-content">
+          <p>お支払い方法</p>
+          <i class="fas fa-angle-right fa-2x"></i>
+        </div>
+      <% end %>
     </div>
